* Added -Wall to enhance code quality. * Use uint8_t instead of char for data send via libusb. * Change convertDecimalToHex to use a cast instead of a switch. * Removed various unused variables and labels. * Fixed prototype of populateShiftPosition.

--- a/configure.ac
+++ b/configure.ac
@@ -27,6 +27,8 @@ CPPFLAGS="-I$KERNEL_HEADERS_DIR/include"
 AX_PKG_CHECK_MODULES([JSON], [], [json-c >= 0.11])
 AX_PKG_CHECK_MODULES([LIBUSB], [], [libusb-1.0 >= 1.0.18])
 
+CFLAGS="$CFLAGS -Wall"
+
 AC_SUBST([ULTIMARC_LIB_VERSION], [0.1])
 
 AC_CONFIG_FILES([Makefile 
